--- a/SeriesMVVM/SeriesMVVM.csproj
+++ b/SeriesMVVM/SeriesMVVM.csproj
@@ -11,6 +11,7 @@
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <Nullable>enable</Nullable>
+    <PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\SeriePage.xaml" />
