--- a/.github/workflows/master_apiseriesv10.yml
+++ b/.github/workflows/master_apiseriesv10.yml
@@ -27,7 +27,8 @@ jobs:
         run: dotnet publish API_REST_ETAT/API_REST_ETAT.csproj -c Release -o publish
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish API_REST_ETAT/API_REST_ETAT.csproj -c Release -o publish
+        #dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,3 +65,4 @@ jobs:
           package: .
 
           
+
