Refactor Azure deployment workflow for API
Updated the workflow to publish the API and upload artifacts correctly.

--- a/.github/workflows/master_apiseriesv10.yml
+++ b/.github/workflows/master_apiseriesv10.yml
@@ -13,41 +13,39 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
+      - name: Publish API
         run: dotnet publish API_REST_ETAT/API_REST_ETAT.csproj -c Release -o publish
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
-
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: api-publish
+          path: publish
 
   deploy:
     runs-on: windows-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: api-publish
+          path: publish
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -56,13 +54,14 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_25743E18A81945838F18BF03A0BBE1B5 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'apiseriesV10'
           slot-name: 'Production'
-          package: .
+          package: publish
+
 
           
+
 
 
